@@ -27,3 +27,7 @@ Source - https://www.hl7.org/fhir/us/core/stu4/
 - Revised Endpoint in the Practitioner endpoint so it points to relative path, not absolute path
 - Move provenance-1 constraint from Provenance.agent.onBehalfOf to Provenance.agent and fix the expression (https://jira.hl7.org/browse/FHIR-36328)
 - Fix Condition constraint us-core-1 expression (https://jira.hl7.org/browse/FHIR-36336) 
+- Replace the packaged USPS valueset with an expanded version obtained from https://tx.fhir.org/r4/ValueSet/$expand?url=http://hl7.org/fhir/us/core/ValueSet/us-core-usps-state on 2022-03-28
+
+# Re-check after each update to the IG
+- Update the http://hl7.org/fhir/us/core/ValueSet-us-core-usps-state.html valueset from https://tx.fhir.org (if needed)
